<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_gravity="center"
              android:layout_width="300dp"
              android:layout_height="250dp">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:text="@string/rate_text"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/green_items"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rate"
            android:text="@string/rate"
            android:background="@color/green_action_bar"
            android:textColor="@color/white"
            android:layout_width="110dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/not_now"
            android:text="@string/not_now"
            android:background="@color/green_items"
            android:textColor="@color/white"
            android:layout_width="95dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/never"
            android:text="@string/never"
            android:background="@color/red"
            android:textColor="@color/white"
            android:layout_width="95dp"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>