<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="270dp"
                android:orientation="vertical"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:background="@color/white">

    <TextView
        android:id="@+id/dialog_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_action_bar"
        android:text="@string/dialog_list_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"/>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/dialog_label_can_repeat_items"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/dialog_can_repeat_items"
            android:textColor="@color/green_items"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:layout_below="@+id/dialog_label_ask_for_price"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left|center_vertical"/>

        <EditText
            android:id="@+id/dialog_list_name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:layout_below="@+id/dialog_header"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|top"/>

        <TextView
            android:id="@+id/dialog_label_ask_for_price"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/dialog_ask_for_price"
            android:textColor="@color/green_items"
            android:gravity="center"
            android:layout_below="@+id/dialog_list_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="22dp"
            android:layout_gravity="left|bottom"/>

        <CheckBox
            android:id="@+id/checkbox_can_repeat_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignBaseline="@+id/dialog_label_ask_for_price"
            android:layout_alignBottom="@+id/dialog_label_ask_for_price"
            android:layout_alignLeft="@+id/checkbox_can_repeat_items"
            android:layout_alignStart="@+id/checkbox_can_repeat_items"
            android:layout_gravity="right|center_vertical"
            android:checked="false"/>

        <CheckBox
            android:id="@+id/checkbox_ask_for_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/dialog_label_can_repeat_items"
            android:layout_alignRight="@+id/dialog_list_name"
            android:layout_alignEnd="@+id/dialog_list_name"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="5dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/green_action_bar"
        android:layout_gravity="center_horizontal|bottom">

        <ImageButton
            android:id="@+id/cancel_dialog_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@mipmap/cancel_icon"
            android:text="@string/cancel"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right|center_vertical"/>

        <ImageButton
            android:id="@+id/submit_dialog_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@mipmap/confirm_icon"
            android:text="@string/save"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:layout_alignBottom="@+id/dialog_header"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="left|center_vertical"/>
    </FrameLayout>

</LinearLayout>